--- a/src/webapp/WEB-INF/pages/users.html
+++ b/src/webapp/WEB-INF/pages/users.html
@@ -21,11 +21,9 @@
     <link href="https://getbootstrap.com/docs/5.3/examples/cover/cover.css" rel="stylesheet">
 
     <style>
-
         .cover-container {
             max-width: 50em;
         }
-
         .bd-placeholder-img {
             font-size: 1.125rem;
             text-anchor: middle;
@@ -86,12 +84,12 @@
 
     <header class="mb-auto">
         <div>
-            <div th:insert="nav :: nav_in_main"></div>
+            <div th:insert="nav :: nav_in_users"></div>
         </div>
     </header>
 
     <main class="px-3">
-        <div th:insert="main :: main_index"></div>
+        <div th:insert="main :: main_users"></div>
     </main>
 
     <footer class="mt-auto text-white-50">
@@ -100,9 +98,6 @@
     </footer>
 
 </div>
-
-<main th:insert="main :: main"class="px-3"></main>
-
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
